Bug 393213 - If (0,0) is present in a spreedsheet, fitting fails
Summary: If (0,0) is present in a spreedsheet, fitting fails
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: backend (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Stefan Gerlach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-17 08:12 UTC by urcindalo
Modified: 2018-04-23 12:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description urcindalo 2018-04-17 08:12:41 UTC
Hi!
I'm checking out Labplot2 2.5.0 (last sync and installation, 2018/04/16).
When you try to fit your data to a custom non-linear equation, like Michaelis-Menten's [Vm*x/(Km+x)], and your spreedsheet contains the initial (0,0) pair of data, you get this failure:
"Fit status: Iteration is no making progress towards solution".
When you remove (0,0), fitting proceeds.
Comment 1 Stefan Gerlach 2018-04-22 10:44:30 UTC
Git commit bc977b884f2fe68e2b949a2093332e58434a2ff5 by Stefan Gerlach.
Committed on 22/04/2018 at 10:42.
Pushed by sgerlach into branch 'master'.

1. fixed bug in finite difference calculation for custom fitting models
2. add test for bug 393213
FIXED-IN: 2.5

M  +6    -4    src/backend/worksheet/plots/cartesian/XYFitCurve.cpp
M  +58   -0    tests/analysis/fit/FitTest.cpp
M  +3    -1    tests/analysis/fit/FitTest.h

https://commits.kde.org/labplot/bc977b884f2fe68e2b949a2093332e58434a2ff5
Comment 2 urcindalo 2018-04-23 12:19:43 UTC
(In reply to Stefan Gerlach from comment #1)
> Git commit bc977b884f2fe68e2b949a2093332e58434a2ff5 by Stefan Gerlach.
> Committed on 22/04/2018 at 10:42.
> Pushed by sgerlach into branch 'master'.
> 
> 1. fixed bug in finite difference calculation for custom fitting models
> 2. add test for bug 393213
> FIXED-IN: 2.5
> 
> M  +6    -4    src/backend/worksheet/plots/cartesian/XYFitCurve.cpp
> M  +58   -0    tests/analysis/fit/FitTest.cpp
> M  +3    -1    tests/analysis/fit/FitTest.h
> 
> https://commits.kde.org/labplot/bc977b884f2fe68e2b949a2093332e58434a2ff5

Thanks!