1. fixed bug in finite difference calculation for custom fitting models 2. add test for bug 393213

BUG: 393213
FIXED-IN: 2.5